<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="25dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/title"
            android:text="@string/add_exercise"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_margin="12dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/ex_name"
            android:hint="@string/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:importantForAutofill="no"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:inputType="text" />


        <EditText
            android:id="@+id/sets"
            android:hint="@string/sets_hint"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ex_name"
            android:importantForAutofill="no"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:inputType="text" />

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            />

        <Button
            android:id="@+id/save_btn"
            android:text="@string/save"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_picker"
            android:layout_margin="8dp"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <Button
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_btn"
            app:layout_constraintTop_toBottomOf="@id/date_picker"
            android:layout_margin="8dp"
            style="@style/Widget.Material3.Button.TextButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>