<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignUpFragment">


    <TextView
        android:id="@+id/sign_up_tv"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/email_ic"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:autofillHints="emailAddress"
        app:errorIconDrawable="@drawable/error_ic"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_tv"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/lock_ic"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        android:autofillHints="password"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error_ic"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_layout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:startIconDrawable="@drawable/person_ic"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        android:autofillHints="name"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error_ic"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_text_input_layout"
        app:layout_constraintEnd_toStartOf="@id/last_name_input_layout"
        android:layout_marginTop="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        app:startIconDrawable="@drawable/person_ic"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        android:autofillHints="name"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/error_ic"
        app:layout_constraintTop_toTopOf="@id/first_name_input_layout"
        app:layout_constraintStart_toEndOf="@id/first_name_input_layout"
        app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/first_name_input_layout"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_name_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_text_input_layout"
        app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
        >

        <TextView
            android:text="@string/i_want_to"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:text="@string/join_gym"
            android:id="@+id/join_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />

        <RadioButton
            android:text="@string/create_manage_gym"
            android:id="@+id/create_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/gym_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gym_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:visibility="gone"
            tools:visibility="visible"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        app:cornerRadius="99dp"
        app:layout_constraintTop_toBottomOf="@id/type_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/error_tv"
        android:text="@string/error_login_or_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"
        app:layout_constraintVertical_bias="0.1"
        android:layout_margin="12dp"
        android:gravity="center"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>