<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mhss.app.mygym.ui.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_ownerHomeFragment"
            app:destination="@id/ownerHomeFragment"
            app:popUpTo="@id/ownerHomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_userHomeFragment"
            app:destination="@id/userHomeFragment"
            app:popUpTo="@id/userHomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.mhss.app.mygym.ui.SignUpFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/ownerHomeFragment"
        android:name="com.mhss.app.mygym.ui.OwnerHomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_owner_home">
        <action
            android:id="@+id/action_ownerHomeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_ownerHomeFragment_to_subscriberPageFragment"
            app:destination="@id/subscriberPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/userHomeFragment"
        android:name="com.mhss.app.mygym.ui.UserHomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user_home">
        <action
            android:id="@+id/action_userHomeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_userHomeFragment_to_gymSearchFragment"
            app:destination="@id/gymSearchFragment" />
        <action
            android:id="@+id/action_userHomeFragment_to_gymPageFragment"
            app:destination="@id/gymPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mhss.app.mygym.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gymSearchFragment"
        android:name="com.mhss.app.mygym.ui.GymSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_gym_search" >
        <action
            android:id="@+id/action_gymSearchFragment_to_gymPageFragment"
            app:destination="@id/gymPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/gymPageFragment"
        android:name="com.mhss.app.mygym.ui.GymPageFragment"
        android:label="@string/gym"
        tools:layout="@layout/fragment_gym_page" >
        <argument
            android:name="gym"
            app:argType="com.mhss.app.mygym.data.Gym" />
    </fragment>
    <fragment
        android:id="@+id/subscriberPageFragment"
        android:name="com.mhss.app.mygym.ui.SubscriberPageFragment"
        android:label="@string/manage"
        tools:layout="@layout/fragment_subscriber_page" >
        <argument
            android:name="user"
            app:argType="com.mhss.app.mygym.data.User" />
        <action
            android:id="@+id/action_subscriberPageFragment_to_ownerHomeFragment"
            app:destination="@id/ownerHomeFragment"
            app:popUpTo="@id/ownerHomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>